# rag_chatbot

./: .gitignore  LICENSE  README.md  config.yaml  demo.py  pyproject.toml  run_all.sh  run_backend.sh  run_demo.sh  run_frontend.sh  run_tests.sh
app/backend/: database.py  main.py  models.py
app/core/: config.py  expert_knowledge.py  rag.py
app/frontend/: dashboard.py
data/: few_shot_medical.jsonl  sample_questions.md  ui_guide.md
data/theory/: hallucinations.md  model_parameters.md  prompting.md  rag_concepts.md  temperature.md
scripts/: download_data.py  generate_data.py
tests/: test_backend.py  test_expert_knowledge.py  test_rag_unit.py
